Field Hunt/src/objects/Application__c.object
<CustomObject>
    <description>This object holds application information for job applicants, including the Ron McKinley Philanthropy Fellowship program.</description>
    <fields>
        <fullName>Applicant_Address_Line_1__c</fullName>
        <description>First line of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the first line of the applicant&apos;s address.</inlineHelpText>
        <label>Applicant Address Line 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Address_Line_2__c</fullName>
        <description>Second line of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the second line of the applicant&apos;s address.</inlineHelpText>
        <label>Applicant Address Line 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_City__c</fullName>
        <description>City portion of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the applicant&apos;s city.</inlineHelpText>
        <label>Applicant City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Country__c</fullName>
        <description>Country portion of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the applicant&apos;s country.</inlineHelpText>
        <label>Applicant Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <description>The email address of the applicant.</description>
        <inlineHelpText>Enter the email address of the applicant</inlineHelpText>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <description>The first name of the applicant.</description>
        <inlineHelpText>Enter the first name of the applicant.</inlineHelpText>
        <label>Applicant First Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <description>The last name of the applicant.</description>
        <inlineHelpText>Enter the last name of the applicant.</inlineHelpText>
        <label>Applicant Last Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_LinkedIn_URL__c</fullName>
        <description>The LinkedIn URL for the applicant.</description>
        <inlineHelpText>Enter the LinedIn URL for the applicant.</inlineHelpText>
        <label>Applicant LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Applicant_Middle_Name__c</fullName>
        <description>The middle name of the applicant.</description>
        <inlineHelpText>Enter the middle name of the applicant.</inlineHelpText>
        <label>Applicant Middle Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone_Number__c</fullName>
        <description>The phone number of the applicant.</description>
        <inlineHelpText>Enter the phone number of the applicant.</inlineHelpText>
        <label>Applicant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_Postal_Code__c</fullName>
        <description>Postal Code portion of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the applicant&apos;s postal code.</inlineHelpText>
        <label>Applicant Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_State__c</fullName>
        <description>State portion of the applicant&apos;s address.</description>
        <inlineHelpText>Enter the applicant&apos;s state.</inlineHelpText>
        <label>Applicant State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <description>This is the stage the applicant has reached in the interview process.</description>
        <inlineHelpText>Select the stage the applicant has reached in the interview process.</inlineHelpText>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Chosen for Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Semi-finalist</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMPF_Application_Cycle__c</fullName>
        <description>Used for the Ron McKinley program only. The cycle when the application was submitted. This will usually be just a year (2016 for applications received during the 2016 application cycle, even if the fellows start in 2017).</description>
        <inlineHelpText>Used for the Ron McKinley program only. Enter the cycle when the application was submitted. This will usually be just a year (2016 for applications received during the 2016 application cycle, even if the fellows start in 2017).</inlineHelpText>
        <label>RMPF Application Cycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2016_Ron_McKinley_Applicants</fullName>
        <columns>NAME</columns>
        <columns>Application_Stage__c</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Middle_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>Applicant_Email__c</columns>
        <columns>Applicant_Phone_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Ron_McKinley_Applicant</value>
        </filters>
        <filters>
            <field>RMPF_Application_Cycle__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016 Ron McKinley Applicants</label>
        <sharedTo>
            <group>Ron_McKinley_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>APP{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Job_Application</fullName>
        <active>true</active>
        <description>Used for most job applicants.</description>
        <label>Job Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ron_McKinley_Applicant</fullName>
        <active>true</active>
        <description>Use for applications to the Ron McKinley Philanthropy Fellowship Program</description>
        <label>Ron McKinley Applicant</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>